<resources>
    <string name="app_name">Mi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="preference_uuid">io.vonley.uuid</string>
    <string name="preference_voices">io.vonley.voices</string>
    <string name="preference_speed">io.vonley.speed</string>
    <string name="preference_pitch">io.vonley.speed</string>
    <string name="preference_wifi">io.vonley.mi.prefs.wifi</string>
    <string name="header_control">Control</string>
    <string name="data_header">Configuration</string>
    <string name="build_complete">0.0.1</string>
    <string name="preference_clear">io.vonley.mi.prefs.clear</string>
    <string name="preference_version">io.vonley.mi.prefs.version</string>
    <string name="preference_dev">io.vonley.mi.prefs.dev</string>
    <string name="preference_ftp_loc">io.vonley.mi.prefs.ftp.loc</string>
    <string name="preference_ftp_user">io.vonley.mi.prefs.ftp.user</string>
    <string name="preference_ftp_pass">io.vonley.mi.prefs.ftp.pass</string>
    <string name="preference_rest">io.vonley.mi.prefs.rest</string>
    <string name="preference_reboot">io.vonley.mi.prefs.reboot</string>
    <string name="preference_shutdown">io.vonley.mi.prefs.shutdown</string>
    <string name="preference_target_name">io.vonley.mi.prefs.target.name</string>
    <string name="preference_target_version">io.vonley.mi.prefs.target.version</string>
    <string name="preference_jb_port">io.vonley.mi.prefs.jb.port</string>
    <string name="preference_jb_feature">io.vonley.mi.prefs.jb.feature</string>
    <string name="preference_jb_service">io.vonley.mi.prefs.jb.service</string>
    <string name="preference_jb_scan">io.vonley.mi.prefs.jb.scan</string>
    <string name="preference_jb_cache">io.vonley.mi.prefs.jb.cache</string>
    <string name="preference_app_update">io.vonley.mi.prefs.app.update</string>
    <string name="feature_none">feature.none</string>
    <string name="feature_netcat">feature.netcat</string>
    <string name="feature_ftp">feature.ftp</string>

    <string name="feature_goldhen">Golden Hen</string>
    <string name="feature_orbisapi">Orbis Api</string>
    <string name="feature_rpi">Remote Pkg Inst</string>
    <string name="feature_ps3mapi">PS3MAPI</string>
    <string name="feature_ccapi">CCAPI</string>
    <string name="feature_webman">Webman</string>
    <string name="feature_klog">KLog</string>
</resources>