<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/icon_svg_folder"
        app:title="Wifi Info">

        <Preference
            android:title="WIFI"
            app:key="@string/preference_wifi"
            app:summary="@string/app_name" />

    </PreferenceCategory>

    <PreferenceCategory
        app:shouldDisableView="true"
        app:icon="@drawable/icon_svg_monitor"
        app:title="@string/header_control">

        <Preference
            android:title="Rest"
            app:key="@string/preference_rest"
            app:summary="Put your console to rest" />
        <Preference
            android:title="Reboot"
            app:key="@string/preference_reboot"
            app:summary="Reboot your console" />
        <Preference
            android:title="Shutdown"
            app:key="@string/preference_shutdown"
            app:summary="Shutdown your console" />


    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/icon_svg_settings"
        app:iconSpaceReserved="false"
        app:title="@string/data_header">


        <Preference
            app:key="@string/preference_clear"
            app:summary="This will clear cached &amp; saved data"
            app:title="Clear Everything" />

        <Preference
            app:key="@string/preference_version"
            app:summary="@string/build_complete"
            app:title="Version" />

        <Preference
            app:key="@string/preference_dev"
            app:summary="Mr-Smithy-x"
            app:title="Development" />

    </PreferenceCategory>
</PreferenceScreen>